<resources>
    <string name="app_name">Pets</string>
    <string name="title1">Welcome !</string>
    <string name="title2">Safety</string>
    <string name="title3">Control</string>

    <string name="subtitle1">Your Pets are Ours Pets Too!.</string>
    <string name="subtitle2">Your Pets are safe with us!</string>
    <string name="subtitle3">Control your pets from \n any where you want!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">signup</string>
    <!--    <string name="dummy_button">Dummy Button</string>-->
    <!--    <string name="dummy_content">DUMMY\nCONTENT</string>-->
    <!--    <string name="title_activity_camera_screen">Leanback CameraScreen</string>-->
    <!--    <string name="browse_title">Videos by Your Company</string>-->
    <!--    <string name="related_movies">Related Videos</string>-->
    <!--    <string name="grid_view">Grid View</string>-->
    <!--    <string name="error_fragment">Error Fragment</string>-->
    <!--    <string name="personal_settings">Personal Settings</string>-->
    <!--    <string name="watch_trailer_1">Watch trailer</string>-->
    <!--    <string name="watch_trailer_2">FREE</string>-->
    <!--    <string name="rent_1">Rent By Day</string>-->
    <!--    <string name="rent_2">From $1.99</string>-->
    <!--    <string name="buy_1">Buy and Own</string>-->
    <!--    <string name="buy_2">AT $9.99</string>-->
    <!--    <string name="movie">Movie</string>-->
    <!--    -->

    <!--    ============Login Screen===============-->
    <string name="hello">Hello Again</string>
    <string name="logIn"> Log In</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forget">Forget Password?</string>
    <string name="signInGoogle">Sign In with Google </string>
    <string name="signupNow"> Sign Up for free</string>
    <string name="dontHave">Don’t have an account?</string>


    <!--    =========================SignUp==================-->
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="signUp">Sign Up</string>
    <string name="signUpGoogle">Sign Up with Google</string>
    <string name="haveAccount">Already have an account?</string>
    <string name="logInNow">Log In now</string>

    <!--    ===========Forget Screen============-->
    <string name="forgetMsg">Please enter your e-mail address to\n Receive verification code</string>
    <string name="cont">Continue</string>
    <string name="otpV">OTP VERIFICATION</string>
    <string name="otpMSg">Enter Your OTP sent to your E-mail</string>
    <string name="reset">Reset Password</string>
    <string name="resetMsg">Enter your new password</string>
    <string name="verify">Verify</string>


    <!--    ================ Nav Bar========================-->
    <string name="camera">Camera</string>
    <string name="sche">Schedule</string>
    <string name="home">Home</string>
    <string name="notify">Notification</string>
    <string name="user">User</string>


    <!--    ==============Home Screen==============================-->
    <string name="temp">Temperature</string>
    <string name="humi">Humidity</string>
    <string name="light">Light</string>
    <string name="heater">Heater</string>
    <string name="fan">Fan</string>
    <string name="mainTemp">19°</string>
    <string name="predict">Cloudy</string>

    <string name="humV">70%</string>
    <string name="tempV">24°</string>
    <string name="off">OFF</string>
    <string name="low">LOW</string>
    <string name="max">MAX</string>


    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--User Fragment-->
    <string name="phone">Phone</string>
    <string name="phNo">Add a Phone Number</string>

</resources>