<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/bg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <ImageButton
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/field"
            android:padding="10dp"
            android:layout_gravity=""
            android:shadowColor="@color/black"
            android:src="@drawable/chevron_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:layout_margin="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/welcome"
            android:textColor="@color/yellow"
            android:textSize="38sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/name"
            app:boxStrokeColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"

            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@color/not_active">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:cursorVisible="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/field"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/email"
            app:boxStrokeColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@color/not_active">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:cursorVisible="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/field"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxStrokeColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@color/not_active"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/not_active">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:cursorVisible="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/field"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:maxLength="8"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <android.widget.Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="34dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button"
            android:fontFamily="@font/poppins_medium"
            android:shadowColor="@color/white"
            android:stateListAnimator="@null"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <android.widget.Button
            android:layout_width="match_parent"
            android:id="@+id/signUpWithGoogle"
            android:layout_height="50dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button2"
            android:drawableStart="@drawable/google"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:shadowColor="@color/white"
            android:text="@string/signUpGoogle"
            android:textAllCaps="false"
            android:textColor="@color/not_active"
            android:textSize="20sp"
            android:stateListAnimator="@null"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:gravity="center">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/haveAccount"
                android:layout_marginEnd="4dp"
                android:textColor="@color/not_active"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/loginNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/logInNow"
                android:textColor="@color/yellow"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />




        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>