<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/bg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageButton
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/field"
            android:src="@drawable/chevron_left"
            android:padding="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:shadowColor="@color/black"
            />


        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_small"
            tools:ignore="ExtraText" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/forget"
            android:textColor="@color/yellow"
            android:textSize="28sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/forgetMsg"
            android:textColor="@color/not_active"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/email"
            app:boxStrokeColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"

            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@color/not_active">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/field"
                android:cursorVisible="false"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>





        <android.widget.Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/continue_forget_password"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button"
            android:fontFamily="@font/poppins_medium"
            android:stateListAnimator="@null"
            android:text="@string/cont"
            android:textAllCaps="false"

            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>